# servi

./: .gitignore
back/: pyproject.toml  requirements.txt
back/app/: main.py
back/app/controller/admin/: admin.py  users.py
back/app/controller/public/: authentication.py  profile.py
back/app/core/: config.py
back/app/model/: __init__.py  mixins.py  profile.py  role.py  user.py  user_role.py
back/app/repository/: auth_repository.py  base_repository.py  profile_repository.py  role_repository.py  user_repository.py  user_role_repository.py
back/app/schema/: forgot_schema.py  login_schema.py  register_schema.py  response_schema.py  user_role_request_schema.py
back/app/service/admin/: admin_service.py  users_service.py
back/app/service/public/: auth_service.py  profile.py
back/migrations/: env.py
back/migrations/versions/: ecbc81d1429f_initial_migrations.py
front/: index.html  package.json  tailwind.config.cjs
front/src/: App.tsx  main.tsx
front/src/admin/assets/css/: index.css
front/src/admin/components/Breadcrumb/: Breadcrumb.tsx
front/src/admin/components/Card/: CardMoney.tsx  CardOrders.tsx  CardUsers.tsx  CardViews.tsx
front/src/admin/components/Chart/: ChartFour.tsx  ChartOne.tsx  ChartThree.tsx  ChartTwo.tsx
front/src/admin/components/Chat/: ChatCard.tsx
front/src/admin/components/Checkbox/: CheckboxFive.tsx  CheckboxFour.tsx  CheckboxOne.tsx  CheckboxThree.tsx  CheckboxTwo.tsx
front/src/admin/layout/: DefaultLayout.tsx
front/src/contexts/: AuthProvider.tsx  RequireAuth.tsx  useAuth.tsx
front/src/user/layout/: PublicLayout.tsx
(+48 files in other folders)
